Migrated the revenue-label relationship to one-many to many-to-many